style: fixed wrong margin #trench-83

--- a/frontend/src/app/measurement-settings/measurement-settings.component.scss
+++ b/frontend/src/app/measurement-settings/measurement-settings.component.scss
@@ -24,7 +24,7 @@ h1 {
     width: 100%;  
     gap: 10px;
     min-height: 50vh;
-    margin-top: 50px;
+    margin-top: 5px;
 }
 
 .button-container{
